fix button alignment on profile

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -61,7 +61,6 @@
     margin-left: 2px;
     border-radius: 3px;
     font-weight: 600;
-    margin-bottom: 5px;
 }
 
 .username-display {
